--- a/Project/Droid_Web.csproj
+++ b/Project/Droid_Web.csproj
@@ -46,23 +46,26 @@
       <HintPath>packages\Droid_Database.1.0.3\lib\4.0\System.Data.SqlServerCe.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Windows.Forms.Ribbon, Version=3.5.8.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\Droid-Manager\packages\officeribbon.3.5.8.4\lib\net20\System.Windows.Forms.Ribbon.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tools4Libraries, Version=1.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Tools4Libraries.1.0.12\lib\4.5.1\Tools4Libraries.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controler\GetText.cs" />
     <Compile Include="Controler\GoogleImage.cs" />
     <Compile Include="Controler\HtmlRemoval.cs" />
+    <Compile Include="Controler\Interface_web.cs" />
     <Compile Include="Controler\ObjectToHtml.cs" />
     <Compile Include="Controler\ParserArticle.cs" />
     <Compile Include="Controler\ParserCarte.cs" />
@@ -73,6 +76,26 @@
     <Compile Include="Controler\Web.cs" />
     <Compile Include="Controler\WebSeeker.cs" />
     <Compile Include="Enrich.cs" />
+    <Compile Include="Properties\Resource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\ResourceEnglish.Designer.cs">
+      <DependentUpon>ResourceEnglish.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="Properties\ResourceFrench.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResourceFrench.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <DependentUpon>Settings.settings</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
     <Compile Include="Models\Article.cs" />
     <Compile Include="Models\Carte.cs" />
     <Compile Include="Models\Humain.cs" />
@@ -93,20 +116,71 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\PanelNetwork.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\PanelNetwork.Designer.cs">
+      <DependentUpon>PanelNetwork.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ToolStripMenuWEB.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="View\ViewNetwork.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ViewNetwork.Designer.cs">
+      <DependentUpon>ViewNetwork.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ViewIAWebBrowser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ViewIAWebBrowser.Designer.cs">
+      <DependentUpon>ViewIAWebBrowser.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\ResourceEnglish.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResourceEnglish.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\ResourceFrench.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResourceFrench.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="TS_Web.resx">
       <DependentUpon>TS_Web.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\PanelNetwork.resx">
+      <DependentUpon>PanelNetwork.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewNetwork.resx">
+      <DependentUpon>ViewNetwork.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Tools4Libraries\Tools4Libraries.csproj">
+      <Project>{aad2b1be-9b2d-455d-8dd4-64e4e84dd985}</Project>
+      <Name>Tools4Libraries</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ShieldTileBg.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
