--- a/Project/packages.config
+++ b/Project/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Tools4Libraries" version="1.0.12" targetFramework="net451" />
+  <package id="officeribbon" version="3.5.8.4" targetFramework="net451" />
 </packages>
